# deepeye

./: .gitignore  README.md  llaves.txt
backend/: pyproject.toml
backend/backend/: aplicacion.py
frontend/: bun.lockb  package.json
frontend/src/components/: Barra_lateral.astro  Barra_lateral.jsx  Cuerpo.astro  Cuerpo.jsx  Dashboard.jsx  Hero.astro  cliente.js
frontend/src/pages/: dashboard.astro  index.astro
frontend/src/styles/: global.css
