[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["techatlasdev <srgoqui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
requests = "^2.32.3"
uvicorn = "^0.34.0"

[tool.poetry.scripts]
start = "backend.aplicacion:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
